--- a/sass/_app.scss
+++ b/sass/_app.scss
@@ -72,12 +72,19 @@
     align-self: flex-end;
     color: $color-dark;
     font-size: 1.6em;
-    grid-area: heading;
     margin: 0;
 
     &--section {
       align-self: center;
+      grid-area: heading;
     }
+  }
+
+  &__logo {
+    fill: $color-dark;
+    height: 20px;
+    margin-left: 5px;
+    width: 20px;
   }
 
   &__info {
@@ -212,7 +219,7 @@
   }
 }
 
-.loader {
+/* .loader {
   @include flex-center;
   animation: logo 0.8s alternate infinite ease-in-out;
   border: 3px solid #000;
@@ -227,4 +234,4 @@
     height: 20px;
     width: 20px;
   }
-}
+} */
