--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -82,11 +82,17 @@
   align-self: flex-end;
   color: #555;
   font-size: 1.6em;
-  grid-area: heading;
   margin: 0;
 }
 .app__heading--section {
   align-self: center;
+  grid-area: heading;
+}
+.app__logo {
+  fill: #555;
+  height: 20px;
+  margin-left: 5px;
+  width: 20px;
 }
 .app__info {
   border-left: 1px solid #999;
@@ -184,10 +190,8 @@
   }
 }
 
-.loader {
-  align-items: center;
-  display: flex;
-  justify-content: center;
+/* .loader {
+  @include flex-center;
   animation: logo 0.8s alternate infinite ease-in-out;
   border: 3px solid #000;
   border-radius: 20%;
@@ -195,13 +199,13 @@
   height: 30px;
   width: 30px;
   z-index: 1;
-}
-.loader--panel {
-  border: 2px solid #fff;
-  height: 20px;
-  width: 20px;
-}
 
+  &--panel {
+    border: 2px solid #fff;
+    height: 20px;
+    width: 20px;
+  }
+} */
 .BarChart {
   background-color: #eee;
   width: 100%;
@@ -394,18 +398,6 @@
   margin-right: 5px;
   stroke: inherit;
   stroke-width: 10;
-  width: 20px;
-}
-.Icon--logo {
-  fill: #000;
-  grid-area: logo;
-  height: 25px;
-  width: 25px;
-}
-.Icon--mainLogo {
-  fill: #555;
-  height: 20px;
-  margin-left: 5px;
   width: 20px;
 }
 .Icon--rotated {
