--- a/sass/_overall.scss
+++ b/sass/_overall.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  font-size: 16px;
   touch-action: manipulation;
   -webkit-tap-highlight-color: transparent;
   -webkit-print-color-adjust: exact;
