--- a/sass/_barChart.scss
+++ b/sass/_barChart.scss
@@ -1,7 +1,7 @@
 @import "_variables.scss";
 @import "_mixins.scss";
 
-.BarChart {
+.barChart {
   background-color: $color-light-3;
   width: 100%;
   height: 100%;
