--- a/sass/_barChart.scss
+++ b/sass/_barChart.scss
@@ -3,8 +3,9 @@
 
 .barChart {
   background-color: $color-light-3;
-  width: 100%;
   height: 100%;
+  padding-top: 40px;
+  width: 100%;
 }
 
 .tooltip {
